build: update build and dependencies

--- a/src/button/__docs__/Button.mdx
+++ b/src/button/__docs__/Button.mdx
@@ -21,7 +21,7 @@ const Example = () => {
         <Button
             animationStyle="block"
             variant={false}
-            revers={false}
+            reverse={false}
             onClick={()=> console.log("Clicked")}
         >
             Button
