feat: add Link components and css variables

--- a/src/button/__docs__/Button.mdx
+++ b/src/button/__docs__/Button.mdx
@@ -7,7 +7,7 @@ import * as Button from "./Button.stories.tsx";
 
 Button component with different props.
 
-#### Example
+#### ButtonExample
 
 <Canvas of={Button.Primary} />
 
@@ -16,7 +16,7 @@ Button component with different props.
 ```tsx
 import { Button } from "vertex-design";
 
-const Example = () => {
+const ButtonExample = () => {
     return (
         <Button
             animationStyle="block"
@@ -29,7 +29,7 @@ const Example = () => {
     );
 };
 
-export default Example;
+export default ButtonExample;
 ```
 
 #### Arguments
